# testa-de-ferro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml  exma-manual.md  plan.md  pyproject.toml  testa-de-ferro-spec.md
.github/workflows/: ci.yml
api/infrastructure/: config.py  duckdb_connection.py  hmac_service.py  pdf_generator.py
docker/: Dockerfile.api  Dockerfile.pipeline  Dockerfile.web  nginx.conf
pipeline/: config.py  log.py  main.py
pipeline/output/: build_duckdb.py  completude.py  schema.sql
pipeline/sources/: base.py
pipeline/staging/: parquet_writer.py
pipeline/transform/: alertas.py  cnae_mapping.py  cruzamentos.py  grafo_societario.py  hmac_cpf.py  match_servidor_socio.py  resolve_fks.py  score.py
tests/: conftest.py
tests/domain/: test_alertas.py  test_cnpj_vo.py  test_contrato_entity.py  test_cpf_vo.py  test_doacao_entity.py  test_fornecedor_entity.py  test_grafo_service.py  test_sancao_entity.py  test_score.py  test_score_alerta_independencia.py
tests/fixtures/: sample_cnpj.csv  sample_pncp.json  sample_qsa.csv  sample_sancoes.csv  sample_servidores.csv  sample_tse.csv
tests/integration/: conftest.py  test_api_alertas.py  test_api_busca.py  test_api_export.py  test_api_fornecedor.py  test_api_grafo.py  test_api_orgao.py  test_api_ranking.py  test_api_stats.py  test_rate_limit.py
tests/pipeline/: test_alertas_batch.py  test_build_atomico.py  test_cnae_mapping.py  test_completude.py  test_cruzamentos.py  test_fk_resolution.py  test_hmac_cpf.py  test_ingestao_cnpj.py  test_ingestao_pncp.py  test_ingestao_rais.py  test_ingestao_sancoes.py  test_ingestao_servidores.py  test_ingestao_tse.py  (+2 more)
web/: eslint.config.js  index.html  package-lock.json  package.json
(+193 files in other folders)
